<resources>
    <string name="app_name">Privacy Guardian</string>
    <string name="action_settings">Settings</string>

    <string name="analyze_update">업데이트</string>
    <string name="analyze_sample01">샘플1</string>
    <string name="analyze_sample02">샘플2</string>
    <string name="analyze_clearDB">DB 초기화</string>
    <string name="hello_firstpage">안녕,\n내 개인정보!</string>
    <string name="hello_analyzer">I\'ll guide you to analyzing…</string>
    <string name="title_activity_mainpage">mainpage</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_analyze">분석 시작</string>
    <string name="title_activity_dataselect">데이터 선택</string>
    <string name="show_filtered_result">결과 보기</string>
    <string name="copyright_image">아이콘의 저작권은 GraphicLoads에 있습니다.\nPoro 의 저작권은 Riot Games(inc)에 있습니다.</string>
    <string name="ds_select_date">날짜를 선택해 주세요</string>
    <string name="ds_select_type_message">개인정보의 종류를 선택해 주세요</string>
    <string name="ds_select_app">앱을 선택해 주세요</string>
    <string name="firstpage_vpnbutton">vpn test</string>
    <string name="latitude">위치/위도</string>
    <string name="longitude">위치/경도</string>
    <string name="latlng">위치</string>
    <string name="unknown_type">알수없음</string>
    <string name="ds_date_s">시작 날짜</string>
    <string name="ds_date_e">종료 날짜</string>
    <string name="maps">지도</string>
    <string name="back">뒤로 가기</string>
    <string name="notification_title">PrivacyGuradian</string>
    <string name="add_sample_db">DB추가</string>
    <string name="add_value">value</string>
    <string name="add_type">sensitive info type</string>
    <string name="add_ip">ip</string>
    <string name="add_time">time as long</string>
    <string name="add_packagename">packagename</string>
    <string name="addtodb">DB에 추가</string>
    <string name="cancel">취소</string>
    <string name="firstpage_quote">자신에 관한 정보가 언제 누구에게  어느 범위까지 알려지고 또 이용되도록 할 것인지를  그 정보주체가 스스로 결정할 수 있는 권리</string>
    <string name="firstpage_quote2">\'개인정보 자기결정권\'의 정의, 헌법재판소(2005)</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
