<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.socialcoding.privacyguardian.Fragment.FeedbackFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/tv_hello"
            style="@style/Firstpage_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="12dp"
            android:text="@string/hello_firstpage" />

        <TextView
            android:id="@+id/leftquote"
            style="@style/Quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/tv_quote"
            android:text="“" />

        <TextView
            android:id="@+id/tv_quote"
            style="@style/Quotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/leftquote"
            android:layout_toLeftOf="@+id/rightquote"
            android:padding="2dp"
            android:text="@string/firstpage_quote"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tv_quote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_quote"
            android:text="@string/firstpage_quote2" />

        <TextView
            android:id="@+id/rightquote"
            style="@style/Quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_quote"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:text="”" />

    </RelativeLayout>


</FrameLayout>
